gccida/g0/store_constructor
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor/src/expr.c:4856:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor/src/expr.c:4869:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v22; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor/src/expr.c:4870:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor/src/expr.c:4871:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor/src/expr.c:4872:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor/src/expr.c:4874:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor/src/expr.c:4875:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor/src/expr.c:4876:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v29; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor/src/expr.c:4877:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v30; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor/src/expr.c:4878:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor/src/expr.c:4885:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v38; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor/src/expr.c:4886:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v39; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor/src/expr.c:4892:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v45; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor/src/expr.c:4893:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v46; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor/src/expr.c:4903:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v56; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor/src/expr.c:4908:5: error: expected ';' after expression
tree expa; // [rsp+18h] [rbp-248h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor/src/expr.c:4908:6: error: use of undeclared identifier 'expa'; did you mean 'exp'?
tree expa; // [rsp+18h] [rbp-248h] 
     ^~~~
     exp
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor/src/expr.c:4849:31: note: 'exp' declared here
void  store_constructor( tree exp, rtx target, int cleared, __int64 size) 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor/src/expr.c:4911:5: error: expected ';' after expression
tree value; // [rsp+30h] [rbp-230h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor/src/expr.c:4911:6: error: use of undeclared identifier 'value'
tree value; // [rsp+30h] [rbp-230h] 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/store_constructor/src/obj/expr.o] Error 1
